Added back button for seeds
Also some button style. For whatever reason it feels natural to have a back button in the seed view but not the post view? Either way i just made it like that for now

--- a/templates/world-seed.html
+++ b/templates/world-seed.html
@@ -1,8 +1,13 @@
 {% extends "template.html" %}
 
+{% block localcss %}
+    <link rel="stylesheet" href="{{url_for('static', filename='css/world-seeds-hub_style.css')}}">
+{% endblock %}
+
 {% block content %}
     <!-- Main Body of Page -->
 		<div class = "main">
+			<input type="button" id="backbut" value="Back to Seeds" onclick="location.href='/worldseed/all'" class = "link-buttons">
 			<p><b>Seed:</b> {{ seed[1] }}</p>
 			<p><b>Tag: </b>{{ tag[1] }}</p>
 			<p><b>Description: </b>{{ seed[2] }}</p>
