--- a/templates/world-seeds.html
+++ b/templates/world-seeds.html
@@ -17,13 +17,13 @@
 			<h2>Choose your platform: </h2>
 			<div id="choose">
 				<div>
-					<input type="button" name="platform" value="All" id="all" onclick="location.href='/worldseed/all'">
+					<input type="button" name="platform" value="All" id="all" onclick="location.href='/worldseed/all'" class = "link-buttons">
 				</div>
                 <div>
-					<input type="button" name="platform" value="Java" id="java" onclick="location.href='/worldseed/java'">
+					<input type="button" name="platform" value="Java" id="java" onclick="location.href='/worldseed/java'" class = "link-buttons">
 				</div>
 				<div>
-                	<input type="button" name="platform" value="Bedrock" id="bedrock" onclick="location.href='/worldseed/bedrock'">
+                	<input type="button" name="platform" value="Bedrock" id="bedrock" onclick="location.href='/worldseed/bedrock'" class = "link-buttons">
 				</div>
 			</div>
 			<h1>Platform: <span class="proper"> {{ plat }} </span></h1>
