--- a/static/css/global.css
+++ b/static/css/global.css
@@ -183,14 +183,14 @@ td:hover {
 
 /* ------------------------------------------------------------------------ */
 
-input[type=text], textarea {
+input[type=text], textarea, input[type=password] {
     background-color: #c1a68b;
     padding: 5px;
 	border: 3px solid #af8c6a;
 	outline: none;
 }
 
-input[type=text]:focus, textarea:focus {
+input[type=text]:focus, input[type=password]:focus, textarea:focus {
     border: 3px solid #74593e;
 }
 
