--- a/templates/admin-login.html
+++ b/templates/admin-login.html
@@ -9,12 +9,15 @@
 		<div class = "main">
 			<div class = "login-container">
 			<form id="login" method="post">
+				{% for message in get_flashed_messages() %}
+        			{{ message }}
+        		{% endfor %}
 				<label for="user">Username</label>
 				<input type="text" placeholder="Enter Admin Username" name="user" id ="user" required>
 				<label for="passw">Password</label>
-				<input type="text" placeholder="Enter Admin Password" name="passw" id ="passw" required>
+				<input type="password" placeholder="Enter Password" name="passw" id ="passw" required>
 				<br>
-				<center><button type="submit" id = "login-button" class = "link-buttons">Login</button></center>
+				<center><button type="submit" formmethod="POST" formaction="/login" id = "login-button" class = "link-buttons">Login</button></center>
 			</form>
 			</div>
 		</div>
