Started the report html
Link to report displays in bottom of page when logged into admin

--- a/templates/template.html
+++ b/templates/template.html
@@ -42,6 +42,9 @@
 					<a href="https://twitter.com/Minecraft" target="_blank"><img alt="Twitter logo" src="{{url_for('static', filename='images/twitter-logo.png')}}" class = "social-media-links"></a>
 					<a href="https://www.youtube.com/Minecraft" target="_blank"><img alt="YouTube logo" src="{{url_for('static', filename='images/youtube-logo.png')}}" class = "social-media-links"></a>
 					<a href="https://www.facebook.com/minecraft/" target="_blank"><img alt="Facebook logo" src="{{url_for('static', filename='images/facebook-logo.png')}}" class = "social-media-links"></a>
+					{% if current_user.is_authenticated and current_user.is_admin%}
+						<a href="/report" style="color: white;">View Report Page</a>
+					{% endif %}
 				</div>
 			</div>
 		</div>
