--- a/templates/world-seed.html
+++ b/templates/world-seed.html
@@ -7,7 +7,7 @@
 {% block content %}
     <!-- Main Body of Page -->
 		<div class = "main">
-			<input type="button" id="backbut" value="Back to Seeds" onclick="location.href='/worldseed/all'" class = "link-buttons">
+			<input type="button" id="backbut" value="Back to World Seeds" onclick="location.href='/worldseed/all'" class = "link-buttons">
 			<p><b>Seed:</b> {{ seed[1] }}</p>
 			<p><b>Tag: </b>{{ tag[1] }}</p>
 			<p><b>Description: </b>{{ seed[2] }}</p>
