--- a/static/css/blog-post.css
+++ b/static/css/blog-post.css
@@ -1,5 +1,5 @@
-#subject, #body {
-    text-align: center;
+#subject {
+    text-decoration: underline;
 }
 
 #subject {
@@ -7,23 +7,17 @@
 }
 
 td {
-    font-size: 1em;
+    font-size: 1.2em;
+    padding: 15px 0;
 }
 
-td:hover {
-    background-color: #00802b;
-}
-
-table {
-    width: 20%;
-}
-
-input {
+input[type=text] {
     width: 50%;
 }
 
 #commentbutton {
-    width: 25%;
+    width: 140px;
+    margin-left: 15%;
 }
 
 #comments, #commentform {
@@ -33,15 +27,28 @@ input {
 
 #nothing {
     margin-bottom: 0.5em;
-    color: white;
+    color: black;
 }
 
 #commentform h1 {
-    color: white;
+    color: black;
 }
 
 #comments {
     margin-bottom: 1em;
 }
 
+.check-box-input {
+    width: 20px;
+    height: 20px;
+}
 
+@media (max-width: 49.9375em) {
+    input[type=text] {
+        width: 70%;
+    }
+
+    #commentbutton {
+        margin-left: 20%;
+    }
+}
