--- a/templates/blog-posts.html
+++ b/templates/blog-posts.html
@@ -42,7 +42,7 @@
 		var hi = document.getElementById("list").innerHTML;
 		hi = (hi.trim) ? hi.trim() : hi.replace(/^\s+/,'');
 		if(hi == '') {
-			document.getElementById("list").outerHTML = "<h2 id='nothing'>Nothing to see here</h2>";
+			document.getElementById("list").outerHTML = "<h2 id='nothing'>No Posts Available</h2>";
 		}
 	</script>
 {% endblock %}
