--- a/templates/world-seeds.html
+++ b/templates/world-seeds.html
@@ -55,7 +55,7 @@
 		var hi = document.getElementById("list").innerHTML;
 		hi = (hi.trim) ? hi.trim() : hi.replace(/^\s+/,'');
 		if(hi == '') {
-			document.getElementById("list").outerHTML = "<h2 id='nothing'>Nothing to see here</h2>";
+			document.getElementById("list").outerHTML = "<h2 id='nothing'>No World Seeds Available</h2>";
 		}
 	</script>
 {% endblock %}
