--- a/templates/get-minecraft.html
+++ b/templates/get-minecraft.html
@@ -8,6 +8,7 @@
     <!-- Main Body of Page -->
 		<div class = "main">
 			<!-- The 3 pictures at the top -->
+			<h1>Choose your device to get started:</h1>
 			<div class = "display-download-options">
 				<a href="#purchase-download">
 					<div class = "option-selection" id = "computer" onclick="showDownload(this.id)">
@@ -52,15 +53,8 @@
 						<li><a href = "https://store.playstation.com/en-us/product/UP4433-CUSA00744_00-MINECRAFTPS40001" target="_blank">Playstation</a></li>
 						<li><a href = "https://www.minecraft.net/en-us/store/minecraft-xbox-one" target="_blank">Xbox</a></li>
 					</ul>
-				</div>
-				<div class="download-where">
-					<h2>Steps to Download:</h2>
-					<ol>
-						<li>Click the above link, according to which device you have</li>
-						<li>Purchase the game if you haven't already</li>
-						<li>Download the game</li>
-						<li>Enjoy!</li>
-					</ol>
+
+					<h2>Buy the game if you still need to, download, and enjoy!</h2>
 				</div>
 			</div>
 			<!-- anchor to top, need to not display when selection not chosen -->
