--- a/static/css/get-mc_style.css
+++ b/static/css/get-mc_style.css
@@ -10,7 +10,12 @@
     margin: 10px 0;
     text-align: center;
     display: flex;
+    justify-content: center;
     align-items: center;
+}
+
+h1 {
+    text-align: center;
 }
 
 /*
@@ -30,6 +35,7 @@
 .selection-displayed {
     margin-top: 10px;
     display: flex;
+    justify-content: center;
     flex-direction: row;
     padding: 10px;
 }
