--- a/static/css/home_style.css
+++ b/static/css/home_style.css
@@ -58,8 +58,12 @@
 }
 
 .arrows, #feature {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#feature-img {
+    text-align: center;
 }
 
 @media (max-width: 49.9375em) {
@@ -80,6 +84,10 @@
         width: 100%;
         padding: 0px;
     }
+}
+
+.but:hover {
+    cursor: pointer;
 }
 
 .main div{
