--- a/templates/template.html
+++ b/templates/template.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id="contain">
 
-			<a name="to-top"></a>
+			<a id="to-top"></a>
 			<div class="stickysticky">
 		<!-- Banner at Head of Webpage -->
 				<div class = "header">{{ header }}</div>
