--- a/templates/new-blog-post.html
+++ b/templates/new-blog-post.html
@@ -1,4 +1,9 @@
 {% extends "template.html"%}
+
+{% block localcss %}
+    <link rel="stylesheet" href="{{url_for('static', filename='css/new-blog-post.css')}}">
+{% endblock %}
+
 {% block content %}
     <!-- Main Body of Page -->
 		<div class = "main">
@@ -8,8 +13,11 @@
                 <h2>Begin your post here</h2>
                 <textarea rows="10" style="width: 100%;" name="body" required></textarea><br><br>
 			<!-- This <a> is just to link to the blog post example -->
-                <center><input type="submit" formaction='/addblog' formmethod="post" class = "link-buttons"></center>
-            </<br><br>
+                <div class = "button-center">
+                    <input type="submit" formaction='/addblog' formmethod="post" class = "link-buttons">
+                </div>
+
+            <br><br>
             </form>
 		</div>
 {% endblock %}
