--- a/templates/template.html
+++ b/templates/template.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="en">
 	<head>
 		<title>{{ title }}</title>
@@ -8,8 +9,7 @@
 	</head>
 	<body>
 		<div id="contain">
-
-			<a name="to-top"></a>
+			<a id="to-top"></a>
 			<div class="stickysticky">
 		<!-- Banner at Head of Webpage -->
 				<div class = "header">{{ header }}</div>
