--- a/templates/blog-posts.html
+++ b/templates/blog-posts.html
@@ -10,7 +10,7 @@
 			<form>
 			<center>
 			<div id = "blog-post-buttons">
-				<a href="/newpost"><input type="button" value = "Create a Post" id = "new-post" class = "link-buttons"></a>
+				<input type="button" value = "Create a Post" onclick="window.location.href='/newpost'" id = "new-post" class = "link-buttons">
 				{% if current_user.is_authenticated and current_user.is_admin%}
 					<input type="submit" formaction="/delposts" formmethod="POST" value = "Delete Post" id = "delete-post" class = "link-buttons">
 	    		{% endif %}
