--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,6 +2,7 @@
 
 {% block localcss %}
     <link rel="stylesheet" href="{{url_for('static', filename='css/home_style.css')}}">
+	<script type="text/javascript" src="{{url_for('static', filename='js/home.js')}}" defer></script>
 {% endblock %}
 
 {% block content %}
@@ -57,47 +58,4 @@
 			<p id = "new-feature-title" align="center"></p>
 			<a href="#to-top"><h3 class="to-top">Back to Top</h3></a>
 		</div>
-{% endblock %}
-
-{% block scripts %}
-
-	<script>
-	const backButton = document.getElementById("go-back");
-	const photoDisplay = document.getElementById("feature-img");
-	const featureDesc = document.getElementById("new-feature-title");
-	const nextButton = document.getElementById("go-next");
-
-
-	var imgArr = ["<img src=" + "{{url_for('static', filename='images/new-characters.png')}}" + ' alt="Feature" id = "feature">',
-		"<img src=" + "{{url_for('static', filename='images/honey-block.png')}}" + ' alt="Feature" id = "feature">',
-		"<img src=" + "{{url_for('static', filename='images/beep.png')}}" + ' alt="Feature" id = "feature">'];
-
-	var imgDesc = ["New Characters", "New Blocks", "New Animals"];
-
-	var i = 0;
-	function display(clickIndex) {
-		i = (i + clickIndex + imgArr.length) % imgArr.length;
-		var img = imgArr[i];
-		photoDisplay.innerHTML = img;
-	}
-
-	var k = 0;
-	function displayDesc(clickIndex) {
-		k = (k + clickIndex + imgDesc.length) % imgDesc.length;
-		featureDesc.innerHTML = imgDesc[k];
-	}
-
-	function next() {
-		display(1);
-		displayDesc(1);
-	}
-
-	function back() {
-		display(-1);
-		displayDesc(-1);
-	}
-
-	display(0);
-	displayDesc(0);
-	</script>
 {% endblock %}
