--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -2,6 +2,7 @@
 
 {% block localcss %}
     <link rel="stylesheet" href="{{url_for('static', filename='css/blog-post.css')}}">
+	<script type="text/javascript" src="{{url_for('static', filename='js/blogpost.js')}}" defer></script>
 {% endblock %}
 
 {% block content %}
@@ -49,14 +50,4 @@
 				</form>
 			</div>
 		</div>
-{% endblock %}
-
-{% block scripts %}
-	<script>
-		var hi = document.getElementById("list").innerHTML;
-		hi = (hi.trim) ? hi.trim() : hi.replace(/^\s+/,'');
-		if(hi == '') {
-			document.getElementById("list").outerHTML = "<h2 id='nothing'>No Comments Available...</h2>";
-		}
-	</script>
 {% endblock %}
