What I eliminated for errors so far

--- a/templates/get-minecraft.html
+++ b/templates/get-minecraft.html
@@ -30,7 +30,7 @@
 
 			<br>
 
-			<a name="purchase-download"></a>
+			<a id="purchase-download"></a>
 			<div class = "selection-displayed" id = "option-selected">
 				<div class = "purchase-where">
 					<h2>Where to purchase/download</h2>
