--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 			</div>
-			<p id = "new-feature-title" align="center"></p>
+			<p id = "new-feature-title"></p>
 			<a href="#to-top"><h3 class="to-top">Back to Top</h3></a>
 		</div>
 {% endblock %}
