All my changes for no more errors

--- a/templates/admin-login.html
+++ b/templates/admin-login.html
@@ -17,7 +17,9 @@
 					<label for="passw">Password</label>
 					<input type="password" placeholder="Enter Password" name="passw" id ="passw" required>
 					<br>
-					<center><button type="submit" formmethod="POST" formaction="/login" id = "login-button" class = "link-buttons">Login</button></center>
+					<div id="button-center">
+						<button type="submit" formmethod="POST" formaction="/login" id = "login-button" class = "link-buttons">Login</button>
+					</div>
 				</form>
 			</div>
 		</div>
