--- a/templates/build-ideas.html
+++ b/templates/build-ideas.html
@@ -10,9 +10,8 @@
 			<center>
 			<div id = "suggest-idea">
 				<h1>Have a build idea?</h1>
-				<a href="/buildform">
-					<input type="button" value = "Tell Us." id = "tell-us-button" class = "link-buttons">
-				</a><br><br>
+				<input type="button" onclick="window.location.href='/buildform'" value = "Tell Us." id = "tell-us-button" class = "link-buttons">
+				<br><br>
 			</div>
 			</center>
 
