--- a/templates/buildideaform.html
+++ b/templates/buildideaform.html
@@ -1,7 +1,7 @@
 {% extends "template.html" %}
 
 {% block localcss %}
-	<script type="text/javascript" src="{{url_for('static', filename='js/bideaf.js')}}" defer></script>
+	<script src="{{url_for('static', filename='js/bideaf.js')}}" defer></script>
 {% endblock %}
 
 {% block content %}
