--- a/templates/world-seeds.html
+++ b/templates/world-seeds.html
@@ -2,7 +2,7 @@
 
 {% block localcss %}
     <link rel="stylesheet" href="{{url_for('static', filename='css/world-seeds-hub_style.css')}}">
-	<script type="text/javascript" src="{{url_for('static', filename='js/wseed.js')}}" defer></script>
+	<script src="{{url_for('static', filename='js/wseed.js')}}" defer></script>
 {% endblock %}
 
 {% block content %}
