--- a/templates/get-minecraft.html
+++ b/templates/get-minecraft.html
@@ -2,7 +2,7 @@
 
 {% block localcss %}
     <link rel="stylesheet" href="{{url_for('static', filename='css/get-mc_style.css')}}">
-	<script type="text/javascript" src="{{url_for('static', filename='js/getmcscr.js')}}" defer></script>
+	<script src="{{url_for('static', filename='js/getmcscr.js')}}" defer></script>
 {% endblock %}
 
 {% block content %}
